# lrle

./: Cargo.toml  README.md
.github/workflows/: main.yml
docs/plans/: lrle-design.md
src/: input.rs  main.rs
src/renderer/: camera.rs  mod.rs
src/shaders/: solid.wgsl  terrain.wgsl
src/terrain/: colors.rs  loader.rs  mesh.rs  mod.rs
src/ui/: mod.rs
