[package]
name = "lrle"
version = "0.1.0"
edition = "2024"

[dependencies]
# Graphics
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"

# Math
glam = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
